# jobserver-rs

./: .travis.yml  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/actions/compile-make/: action.yml
.github/workflows/: main.yml  make-4.4.yml  msrv.yml
examples/: shared_resources.rs
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
jobserver/: all.html  index.html  sidebar-items.js  struct.Acquired.html  struct.Client.html  struct.HelperThread.html
src/: error.rs  lib.rs  unix.rs  utils.rs  wasm.rs  windows.rs
src/jobserver/: lib.rs.html  unix.rs.html
tests/: client-dropped-before-command-tokio.rs  client-dropped-before-command.rs  client-of-myself.rs  client.rs  helper.rs  make-as-a-client-fifo.rs  make-as-a-client.rs  server.rs  spawn-after-drop.rs
