[package]
name = "jobslot"
version = "0.1.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>", "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cargo-bins/jobslot"
homepage = "https://github.com/cargo-bins/jobslot"
documentation = "https://docs.rs/jobslot"
description = """
An implementation of the GNU make jobserver for Rust
"""
edition = "2021"
rust-version = "1.61.0"

[dependencies]
tokio = { version = "1", default-features = false, features = ["process"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.50"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.20.0", features = ["full"] }

[[test]]
name = "client"
harness = false
path = "tests/client.rs"

[[test]]
name = "server"
path = "tests/server.rs"

[[test]]
name = "client-of-myself"
path = "tests/client-of-myself.rs"
harness = false

[[test]]
name = "client-dropped-before-command"
path = "tests/client-dropped-before-command.rs"
harness = false

[[test]]
name = "client-dropped-before-command-tokio"
path = "tests/client-dropped-before-command-tokio.rs"
harness = false
required-features = ["tokio"]

[[test]]
name = "make-as-a-client"
path = "tests/make-as-a-client.rs"
harness = false

[[test]]
name = "helper"
path = "tests/helper.rs"
