[package]
name = "jobslot"
version = "0.2.6"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>", "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cargo-bins/jobslot"
homepage = "https://github.com/cargo-bins/jobslot"
documentation = "https://docs.rs/jobslot"
description = """
An implementation of the GNU make jobserver for Rust
"""
edition = "2018"
rust-version = "1.52.0"

# docs.rs-specific configuration, shamelessly copied from
# https://stackoverflow.com/a/61417700/8375400.
#
# To test locally, use ` ./build_doc.sh`
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1.0.0"
tokio = { version = "1", default-features = false, features = ["process"], optional = true }
scopeguard = "1.1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.132"

[target.'cfg(windows)'.dependencies]
# Features: 
#  - std: Implement std-only traits for getrandom::Error
#  - rdrand: Enable fallback RDRAND-based implementation on x86/x86_64
getrandom = { version = "0.2.7", features = ["std", "rdrand"] }
windows-sys = { version = "0.42.0", features = ["Win32_System_WindowsProgramming", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.20.0", features = ["full"] }

[[test]]
name = "client"
harness = false
path = "tests/client.rs"
required-features = ["tokio"]

[[test]]
name = "server"
path = "tests/server.rs"

[[test]]
name = "client-of-myself"
path = "tests/client-of-myself.rs"
harness = false

[[test]]
name = "client-dropped-before-command"
path = "tests/client-dropped-before-command.rs"
harness = false

[[test]]
name = "client-dropped-before-command-tokio"
path = "tests/client-dropped-before-command-tokio.rs"
harness = false
required-features = ["tokio"]

[[test]]
name = "make-as-a-client"
path = "tests/make-as-a-client.rs"
harness = false

[[test]]
name = "helper"
path = "tests/helper.rs"
